--- a/report.tex
+++ b/report.tex
@@ -87,9 +87,29 @@ showstringspaces=false                % 不显示字符串中的空格
 
 
     \section{建模过程}
+        \subsection{模型建立}
+        由题目中的模型假设部分可知，系统仿真主要是需要求解以下关于烧毁面积的公式，其中$t_2$为未知量，其余均为用户输入的已知量。
+        $$\int_{0}^{t_1}\beta t \,dt + \int_{t_1}^{t_2}(\beta - \lambda x)t \,dt = 0 $$
+        
+        由于$t_1$时刻后，派出的消防员使得火势蔓延速度降为$\beta - \lambda x < 0$，所以面积应在开始灭火后不断减小，在$t_1$时刻的面积即为烧毁的最大面积。
+        
+        在求解出$t_2$后，即可计算出救援支出以及森林烧毁造成的损失，进一步计算出总的经济损失。
+        具体公式如下：
+        
+        森林烧毁造成的损失:
+        $$c_1 B = c_1 \int_{0}^{t_1}\beta t \,dt$$
+        
+        救援支出:
+        $$[c_2(t_2 - t_1) + c_3]x$$
+        
+        总经济损失：
+        $$c_1 \int_{0}^{t_1}\beta t \,dt + [c_2(t_2 - t_1) + c_3]x$$
 
 
-    \section{关键难点}
+        \subsection{模型求解}
+        先通过MATLAB中的int命令计算第一部分$\int_{0}^{t_1}\beta t \,dt$的积分值，
+
+        \subsection{关键难点}
 
 
     \section{运行指南}
